[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Facundo Olano", email = "facundo.olano@gmail.com"},
]
dependencies = [
    "flask>=2.3.2",
    "feedparser>=6.0.10",
    "favicon>=0.7.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.19",
    "flask-sqlalchemy>=3.0.5",
    "readability-lxml>=0.8.1",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "AGPL"}


[tool.pdm.scripts]
serve = "flask --app src/feedi/app.py run --debug --reload"
sync = "flask --app src/feedi/app.py sync"
testfeeds = "flask --app src/feedi/app.py testfeeds"
debug-feed = "flask --app src/feedi/app.py debug-feed"


[tool.pdm.dev-dependencies]
devel = [
    "pyright>=1.1.318",
]
dev = [
    "ipython>=8.14.0",
]
[tool.pyright]
extraPaths = ["__pypackages__/<major.minor>/lib/"]
