[project]
name = "feedi"
description = "A personal news aggregator"
version = "0.1.0"
requires-python = ">= 3.9"
authors = [
    { name = "Facundo Olano", email = "facundo.olano@gmail.com" }
]
dependencies = [
    "flask",
    "feedparser",
    "favicon",
    "requests",
    "sqlalchemy",
    "flask-sqlalchemy",
    "beautifulsoup4",
    "lxml",
    "gevent",
    "huey",
    "alembic",
    "gunicorn",
    "pyopml",
    "flask-login",
    "Werkzeug",
    "dateparser",
    "Pillow",
    "urllib3<2.3", # pinned to avoid https://github.com/gabrielfalcao/HTTPretty/issues/484
]

[dependency-groups]
dev = [
    "ipython",
    "ipdb",
    "flask-shell-ipython",
    "pytest",
    "httpretty",
    "feedgen",
    "ruff"
]

[tool.ruff]
exclude = [
    ".venv",
    "migrations"
]

line-length = 120
target-version = "py39"

